--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,9 +18,10 @@
       "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
       "react/react-in-jsx-scope": "off",
       "import/no-unresolved": "off",
-      "no-shadow": "off"
+      "no-shadow": "off",
       // windows linebreaks when not in production environment
       // "linebreak-style": ["error", "unix | windows"]
+      "import/no-extraneous-dependencies": ["error", {"devDependencies": true}]
     },
     "overrides": [
       {
